[project]
name = "loginllama"
version = "0.2.0"
description = "Python SDK for LoginLlama suspicious login detection"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Josh Ghent", email = "me@joshghent.com" }]
license = { text = "MIT" }
dependencies = [
  "requests>=2.31",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "requests-mock>=1.12",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
