[project]
name = "loginllama"
version = "2.0.0"
description = "Python SDK for LoginLlama suspicious login detection"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Josh Ghent", email = "me@joshghent.com" }]
license = { text = "MIT" }
dependencies = [
  "requests>=2.32.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.2",
  "requests-mock>=1.12.1",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
